# wfc

./: Cargo.toml  README.md  justfile
.github/workflows/: publish.yml
crates/wfc-cli/: Cargo.toml
crates/wfc-cli/src/: main.rs
crates/wfc-core/: Cargo.toml
crates/wfc-core/benches/: wfc_bench.rs
crates/wfc-core/src/: backtrack.rs  bitset.rs  boundary.rs  config.rs  constraint.rs  error.rs  grid.rs  lib.rs  pattern.rs  retry.rs  rules.rs  sample.rs  solver.rs  state.rs
crates/wfc-gui/: Cargo.toml
crates/wfc-gui/src/app/: export.rs  mod.rs  ui.rs
pkg/archlinux/: PKGBUILD
src/: lib.rs  pattern.rs  sample.rs  wfc.rs
src/app/: export.rs  mod.rs  ui.rs
